...
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/title_cardview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/text_margin"
                    android:layout_marginTop="@dimen/text_margin"
                    android:text="@string/title_activity_neighbour_details"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
...
